removed useless things , refactor

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,9 +32,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.395.0",
+    "react-hook-form": "^7.52.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "link:@hookform/resolvers/zod"
   },
   "exports": {
     "./globals.css": "./src/globals.css",
